<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="repeat">Repeat</string>
    <string name="smart_navigation">Smart navigation</string>
    <string name="continue_s">Continue</string>
    <string name="finish">Finish</string>
    <string name="last_known_location">Last known location</string>
    <string name="status">Status</string>
    <string name="date_created">Date created</string>
    <string name="last_updated">Last updated</string>
    <string name="travel">Travel</string>
    <string name="departure">Departure</string>
    <string name="close">Close</string>
    <string name="deactivate">Deactivate</string>
    <string name="notifications_could_not_be_loaded">User notifications could not be loaded!</string>
    <string name="error">Error</string>
    <string name="google_play_services_required">In order to show maps, the latest version of Google Play services is required. Download the latest version?</string>
    <string name="google_play_services_are_neccesary">Google play services are neccesary for application!</string>
    <string name="invalid_notification_length">Notification has to be shorter than 200 characters!</string>
    <string name="choose_category">Choose category</string>
    <string name="send">Send</string>
    <string name="category">Category</string>
    <string name="notification">Notification</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="type">Type</string>
	<string name="places">Places</string>
    <string name="app_name">smartGPS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_navigation">Travel</string>
    <string name="history">Last travels</string>
    <string name="search_events">Search events</string>
    <string name="search_places">Search places</string>
    <string name="setup_navigation">Setup navigation</string>
    <string name="events">Events</string>
    <string name="input_destination">Input your desired destination</string>
    <string name="input_destination_events">Search for events in...</string>
    <string name="input_destination_places">Search for places in...</string>
    <string name="address">Address</string>
    <string name="gps_coordinates">GPS coordinates</string>
    <string name="navigation_type">Navigation type</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="regular_navigation">Regular navigation</string>
    <string name="smartgps_navigation">smartGPS navigation</string>
    <string name="find_destination">Find destination</string>
    <string name="destination">Destination</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="s_continue">Continue</string>
    <string name="destination_cannot_be_obtained">Destination cannot be obtained!</string>
    <string name="processing">Processing...</string>
    <string name="please_wait">Please wait.</string>
    <string name="navigation">Navigation</string>
    <string name="walking">Walking</string>
	<string name="driving">Driving</string>
	<string name="gps_not_active">Location could not be displayed. Switch-on the GPS receiver to display.</string>
    <string name="navigation_preview">Navigation details</string>
    <string name="start_address">Start address</string>
    <string name="end_address">End address</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="mode">Mode</string>
    <string name="no_internet_connection">Active internet connection is needed!</string>
    <string name="preview_on_map">Preview on map</string>
    <string name="login_to_smartGps">Login to application using your smartGPS account:</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
	<string name="password">Password</string>
	<string name="missing_input_data">Please fill all input forms!</string>
	<string name="settings">Settings</string>
	<string name="logout">Logout</string>
	<string name="logout_hint">Logout from smartGPS</string>
	<string name="logout_question">Logout from smartGPS?</string>
	<string name="register">Register</string>
	<string name="name">Name</string>
	<string name="surname">Surname</string>
	<string name="register_new_user">Register new user</string>
	<string name="password_validation_message">Password must have a minimum length of 8!</string>
	<string name="connection_timeout_has_occured">Connection timeout, please wait for few seconds and try again. If this error occurs once more, contact us at support@smartGps.com</string>
	<string name="my_profile">My profile</string>
	<string name="my_profile_hint">View or update your smartGPS profile</string>
	<string name="name">Name</string>
	<string name="surname">Surname</string>
	<string name="address">Address</string>
	<string name="postal_office">Postal office</string>
	<string name="country">Country</string>
	<string name="email">Email</string>
	<string name="date_of_birth">Date of birth</string>
	<string name="gender">Gender</string>
	<string name="phone">Phone</string>
	<string name="save_changes">Save changes</string>
	<string name="confirm_password">Confirm password</string>
	<string name="passwords_dont_match">Passwords do not match!</string>
	<string name="basic">Basic</string>
	<string name="select_gender">Select gender</string>
	<string name="incorrect_date_of_birth">Date of birth is not valid!</string>
	<string name="no_events">No events were found on proposed location!</string>
	<string name="no_travels">You have no previous travels!</string>
	<string name="contact">Contact</string>
	<string name="start_navigation_to">Start navigation to %s?</string>
	<string-array name="genders">
	    <item>Male</item>
	    <item>Female</item>
	</string-array>
	<string name="tips">Tips</string>
	<string name="specials">Specials</string>
	<string name="refresh">Refresh</string>
</resources>