<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.smartgps"
    style="@style/RootLayout" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/input_navigation_type_title"
            style="@style/TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input_destination" />

        <TextView
            android:id="@+id/navigation_type"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/navigation_type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background_rounded"
            android:hint="@string/address"
            android:padding="10dp"
            android:singleLine="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/gps_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:visibility="gone" >

            <EditText
                android:id="@+id/latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/edittext_background_rounded"
                android:hint="@string/latitude"
                android:padding="10dp"
                android:inputType="numberDecimal"
                android:singleLine="true" />

            <EditText
                android:id="@+id/longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/edittext_background_rounded"
                android:hint="@string/longitude"
                android:padding="10dp"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/find_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/find_destination"
        android:visibility="gone"
        app:bb_roundedCorners="true"
        app:bb_type="primary" />

    <TextView
        android:id="@+id/destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@drawable/edittext_background_rounded"
        android:padding="10dp"
        android:visibility="gone"
        android:hint="@string/destination"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/regular_navigation"
            app:bb_roundedCorners="true"
            app:bb_type="success" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/smartgps_navigation"
            app:bb_roundedCorners="true"
            app:bb_type="success" />
    </LinearLayout>

</LinearLayout>