<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.smartgps"
    style="@style/RootLayout" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/start_address_title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/start_address" />

        <TextView
            android:id="@+id/start_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_rounded"
            android:hint="@string/start_address"
            android:padding="10dp" />

        <TextView
            android:id="@+id/end_address_title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/end_address" />

        <TextView
            android:id="@+id/end_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_rounded"
            android:hint="@string/end_address"
            android:padding="10dp" />

        <TextView
            android:id="@+id/end_address_title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_rounded"
            android:hint="@string/distance"
            android:padding="10dp" />

        <TextView
            android:id="@+id/end_address_title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/duration" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_rounded"
            android:hint="@string/duration"
            android:padding="10dp" />

        <TextView
            android:id="@+id/end_address_title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/mode" />

        <TextView
            android:id="@+id/mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background_rounded"
            android:hint="@string/mode"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" >

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/preview_on_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/preview_on_map"
                app:bb_roundedCorners="true"
                app:bb_type="primary" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/regular_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/regular_navigation"
                app:bb_roundedCorners="true"
                app:bb_type="success" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/smart_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/smartgps_navigation"
                app:bb_roundedCorners="true"
                app:bb_type="success" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>