<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.smartgps"
    style="@style/RootLayout" 
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingLeft="0dp"
    android:paddingBottom="0dp">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
         <LinearLayout 
            android:id="@+id/profile_layout"
            android:background="@drawable/row_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_profile"/>
            
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/my_profile"/>
                
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_profile_hint"/>
            </LinearLayout>
        </LinearLayout>
        
         <ImageView 
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:src="@color/background"/>
         
        <LinearLayout 
            android:id="@+id/logout_layout"
            android:background="@drawable/row_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_logout"/>
            
            <LinearLayout 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/logout"/>
                
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_hint"/>
                
            </LinearLayout>
            
        </LinearLayout>
        
        
    </LinearLayout>
    
</ScrollView>