<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.smartgps"
    style="@style/RootLayout"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp"
    android:paddingBottom="10dp" >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:enabled="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:text="INFO"
        android:textColor="@color/gray"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
         <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:padding="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/departure"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/departure"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textSize="16dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:padding="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/destination"
               	android:layout_width="0dp"
               	android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
               	android:textStyle="bold"
                android:textSize="16dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:visibility="gone"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textSize="16dp" />
        </LinearLayout>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:padding="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/date_created"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/date_created"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textSize="16dp" />
        </LinearLayout>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:visibility="gone"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/last_updated"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/date_updated"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textSize="16dp" />
        </LinearLayout>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:visibility="gone"
            android:src="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>